# robot

./: .gitignore  .gitmodules  .travis.yml  README.md  frames.gv  upload_pr  upload_src_cr
base_controller/: CMakeLists.txt  package.xml
base_controller/config/: ds4.yaml  logitech_f710_joy_assign.yaml
base_controller/src/: 4omni.cpp  base_teleop_joy.cpp
can_plugins/: CMakeLists.txt  nodelet_description.xml  package.xml
can_plugins/src/: can_handler.cpp  usb_can_node.cpp
nav_plugins/: .csv  CMakeLists.txt  nodelet_description.xml  package.xml
nav_plugins/action/: Position.action
nav_plugins/include/: i-pd.hpp  pid.hpp  pid_position.hpp  pid_velocity.hpp  rz_to_ts1_r.csv  trajectory.csv  (+1 more)
navigation/: CMakeLists.txt  package.xml
navigation/include/: test.csv  trajectory_tracking.hpp
navigation/include/path/: README.docx
navigation/include/path/PR/RedField/: pp2_to_pz_r.csv  pp3_to_pz_r.csv  pp4_to_pz_r.csv  pp5_to_pz_r.csv  prsz_to_pp1_r.csv  pz_to_pp2_r.csv  pz_to_pp3_r.csv  pz_to_pp4_r.csv  pz_to_pp5_r.csv  pz_to_prsz_r.csv
navigation/include/path/TR/RedField/: kz2_to_kz3_r.csv  kz_to_rz2_r.csv  kz_to_rz3_r.csv  kz_to_rz_r.csv  kz_to_trsz_r.csv  rz2_to_ts2_r.csv  rz_to_kz_r.csv  rz_to_ts1_r.csv  rz_to_ts2_r.csv  rz_to_ts3_r.csv  rz_to_ts4_r.csv  rz_to_ts5_r.csv  sz_to_rz_r.csv  trsz_to_rz_r.csv  ts1_to_kz_r.csv  ts1_to_rz_r.csv  ts1_to_wp_r.csv  ts2_to_kz_r.csv  ts2_to_rz_r.csv  ts2_to_wp_r.csv  ts3_to_kz_r.csv  ts3_to_rz3_r.csv  ts3_to_rz_r.csv  ts3_to_wp_r.csv  ts4_to_kz_r.csv  ts4_to_rz3_r.csv  ts4_to_rz_r.csv  ts4_to_wp_r.csv  ts5_to_kz_r.csv  ts5_to_rz_r.csv  ts5_to_wp_r.csv  wp_to_kz_r.csv
navigation/lib/controller_pid/: CMakeLists.txt  controller_pid.cpp  controller_pid.hpp
navigation/lib/controller_pid_polar/: CMakeLists.txt
navigation/lib/controller_pid_polar/controller_pid/: controller_pid_polar.cpp  controller_pid_polar.hpp
navigation/lib/pid_position/: CMakeLists.txt  pid_position.cpp  pid_position.hpp
navigation/src/: text.py  trajectory_tracking.cpp  trajectory_tracking2.cpp  trajectory_tracking3.cpp
odometry_source_plugins/: CMakeLists.txt  nodelet_description.xml  package.xml
omni4/: CMakeLists.txt  package.xml
pr/: CMakeLists.txt  package.xml  upload  upload_src
robot_control/: CMakeLists.txt  package.xml
robot_description/: CMakeLists.txt  package.xml  urdf.rviz
robot_planer/: CMakeLists.txt  package.xml
rosparam_manager/: CMakeLists.txt  package.xml
state/: CMakeLists.txt  package.xml
tr/: CMakeLists.txt  package.xml  upload  upload_src
(+188 files in other folders)
